Change:  Proof Technique D: discussion about definitions as nouns, adjectives
Change:  Subsection PD.DS (Direct Sums) removed, now in second volume
Change:  Subsection MM.PMM, before Theorem MMIP, conjugate fixed to reflect theorem (Dave Perkins)
Change:  Solution SLT.C25 no longer uses rank of a linear transformation (Becca Ebert)
Change:  Proof of Theorem OD rewritten
Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
Typo:  LaTeX/XML formatting in Solutions RREF.C11, RREF.C13, RREF.C16 (Caden Robinson)
Typo:  LaTeX/XML formatting in Solutions SSLE.M10, LISS.C21, B.C11 (Caden Robinson)
Typo:  Exercise TSS.T20, fixed link to notation (Caden Robinson)
Typo:  Spelling and grammar, Annotated Acronyms VS (Nick Butterfield)
Typo:  LaTeX/XML formatting, Proof of SLSLC, discussion after VSPCV
Typo:  Several LS(A,b) without bold  b  vector (Sophie Bartolomeo)
Typo:  Sign change deep in Example SSP (Dan Messenger)
Typo:  LaTeX/XML formatting in Exercises MISLE.C41, MINM.C40 (Caden Robinson)
Typo:  LaTeX/XML formatting in Exercise VS.M12 (Ameneh McCullough)
Typo:  Removed bad forward reference in Exercise LISS.C21 (Tyler Ueltschi)
Typo:  LaTeX/XML formatting in Exercises LISS.T50, D.M20 (Becca Ebert)
Typo:  Grammar in proof of Theorem TSS (Frankie de Lavis)
Typo:  Spelling in Preface "eigenvvectors"
Typo:  LaTeX/XML formatting in Exercise PD.C40 (Becca Ebert)
Typo:  Stray percent sign in Example D33M (Glenna Toomey)
Typo:  Incorrect initial matrix in Solution DM.C30 (Julie Nelson)
Typo:  Spelling in introduction to Section EE "ethe" (Liz Meuci)
Typo:  Spelling in Section VS "be we" to "but we" (Caden Robinson)
Typo:  Reference in Example VSM is to a definition, not example (Caden Robinson)
Typo:  LaTeX/XML formatting in Reading Question LISS.2 (Caden Robinson)
Typo:  LaTeX/XML formatting in Solutions EE.C23, EE.C24, EE.C25 (Caden Robinson)