@@ -123,7 +123,7 @@ by <acroref type="definition" acro="LTM" />, $AB$ is lower triangular.</p>
 <proof>
 <p>We begin with a proof by induction (<acroref type="technique" acro="I" />) of the first statement in the conclusion of the theorem.  We use induction on the dimension of $V$ to show that if $\ltdefn{T}{V}{V}$ is a linear transformation,  then there is a basis $B$ for $V$ such that the matrix representation of $T$ relative to $B$, $\matrixrep{T}{B}{B}$, is an upper triangular matrix.</p>
 
-<p>To start suppose that $\dimension{V}=1$.  Choose any nonzero vector $\vect{v}\in V$ and realize that $V=\spn{\set{\vect{v}}}$.  Then we can determine $T$ uniquely by $\lt{T}{\vect{v}}=\beta\vect{v}$ for some $\beta\in\complexes$ (<acroref type="theorem" acro="LTDB" />).  This description of $T$ also gives us a matrix representation relative to the  basis $B=\set{\vect{v}}$ as the $1\times 1$ matrix with lone entry equal to $\beta$.  And this matrix representation is upper triangular (<acroref type="definition" acro="UTM" />).</p>
+<p>To start suppose that $\dimension{V}=1$.  Choose any nonzero vector $\vect{v}\in V$ and realize that $V=\spn{\set{\vect{v}}}$.  Then $\lt{T}{\vect{v}}=\beta\vect{v}$ for some $\beta\in\complexes$, which determines $T$ uniquely (<acroref type="theorem" acro="LTDB" />).  This description of $T$ also gives us a matrix representation relative to the  basis $B=\set{\vect{v}}$ as the $1\times 1$ matrix with lone entry equal to $\beta$.  And this matrix representation is upper triangular (<acroref type="definition" acro="UTM" />).</p>
 
 <p>For the induction step let $\dimension{V}=m$, and assume the theorem is true for every linear transformation defined on a vector space of dimension less than $m$.  By <acroref type="theorem" acro="EMHE" /> (suitably converted to the setting of a linear transformation), $T$ has at least one eigenvalue, and we denote this eigenvalue as $\lambda$.  (We will remark later about how critical this step is.)  We now consider properties of the linear transformation $\ltdefn{T-\lambda I_V}{V}{V}$.</p>
 
@@ -147,11 +147,9 @@ by <acroref type="definition" acro="LTM" />, $AB$ is lower triangular.</p>
 </alignmath>
 </p>
 
-<p>Define $W$ to be the subspace of $V$ that is the range of $T-\lambda I_V$, $W=\rng{T-\lambda I_V}$.   We define a new linear transformation $S$, on $W$,
+<p>Let $W$ be the subspace of $V$ that is the range of $T-\lambda I_V$, $W=\rng{T-\lambda I_V}$, and define $k=\dimension{W}\leq m-1$.   We define a new linear transformation $S$, on $W$,
 <alignmath>
-<![CDATA[&\ltdefn{S}{W}{W}]]>
-<![CDATA[&]]>
-<![CDATA[\lt{S}{\vect{w}}&=\lt{T}{\vect{w}}]]>
+\ltdefn{S}{W}{W},\quad\lt{S}{\vect{w}}=\lt{T}{\vect{w}}
 </alignmath>
 </p>
 
@@ -170,13 +168,13 @@ by <acroref type="definition" acro="LTM" />, $AB$ is lower triangular.</p>
 
 <p>Since $W$ is the range of $T-\lambda I_V$, $\lt{\left(T-\lambda I_V\right)}{\vect{w}}\in W$.  And by <acroref type="property" acro="SC" />, $\lambda\vect{w}\in W$.  Finally, applying <acroref type="property" acro="AC" /> we see by closure that the sum is in $W$ and so we conclude that $\lt{S}{\vect{w}}\in W$.  This argument convinces us that it is legitimate to define $S$ as we did with $W$ as the codomain.</p>
 
-<p>$S$ is a linear transformation defined on a vector space with dimension less than $m$, so we can apply the induction hypothesis and conclude that $W$ has a basis, $C=\set{\vectorlist{w}{k}}$, such that the matrix representation of $S$ relative to $C$ is an upper triangular matrix.</p>
+<p>$S$ is a linear transformation defined on a vector space with dimension $k$, less than $m$, so we can apply the induction hypothesis and conclude that $W$ has a basis, $C=\set{\vectorlist{w}{k}}$, such that the matrix representation of $S$ relative to $C$ is an upper triangular matrix.</p>
 
-<p>By <acroref type="theorem" acro="DSFOS" /> there exists a second subspace of $V$, which we will call $U$, so that $V$ is a direct sum of $W$ and $U$, $V=W\ds U$.  Choose a basis $D=\set{\vectorlist{u}{\ell}}$ for $U$.  So  $m=k+\ell$ by <acroref type="theorem" acro="DSD" />, and $B=C\cup D$ is basis for $V$ by <acroref type="theorem" acro="DSLI" /> and <acroref type="theorem" acro="G" />.  $B$ is the basis we desire.  What does a matrix representation of $T$ look like, relative to $B$?</p>
+<p>Beginning with the linearly independent set $C$, repeatedly apply <acroref type="theorem" acro="ELIS" /> to add vectors to $C$, maintaining a linearly independent set and spanning ever larger subspaces of $V$.  This process will end with the addition of $m-k$ vectors, which together with $C$ will span all of $V$.  Denote these vectors as $D=\set{\vectorlist{u}{{m-k}}}$.  Then $B=C\cup D$ is a basis for $V$, and is the basis we desire for the conclusion of the theorem.  So we now consider the matrix representation of $T$ relative to $B$.</p>
 
-<p>Since the definition of $T$ and $S$ agree on $W$,  the first $k$ columns of $\matrixrep{T}{B}{B}$ will have the upper triangular matrix representation of $S$ in the first $k$ rows.  The remaining $\ell=m-k$ rows of these first $k$ columns will be all zeros since the outputs of $T$ on $C$ are all contained in $W$.  The situation for $T$ on $D$ is not quite as pretty, but it is close.</p>
+<p>Since the definition of $T$ and $S$ agree on $W$,  the first $k$ columns of $\matrixrep{T}{B}{B}$ will have the upper triangular matrix representation of $S$ in the first $k$ rows.  The remaining $m-k$ rows of these first $k$ columns will be all zeros since the outputs of $T$ for basis vectors from $C$ are all contained in $W$ and hence are linear combinations of the basis vectors in $C$.  The situation for $T$ on the basis vectors in $D$ is not quite as pretty, but it is close.</p>
 
-<p>For $1\leq i\leq\ell$, consider
+<p>For $1\leq i\leq m-k$, consider
 <alignmath>
 \vectrep{B}{\lt{T}{\vect{u}_i}}
 <![CDATA[&=\vectrep{B}{\lt{T}{\vect{u}_i}+\zerovector}&&]]>\text{<acroref type="property" acro="Z" />}\\
@@ -192,7 +190,7 @@ by <acroref type="definition" acro="LTM" />, $AB$ is lower triangular.</p>
 </alignmath>
 </p>
 
-<p>In the penultimate step of this proof, we have rewritten an element of the range of $T-\lambda I_V$ as a linear combination of the basis vectors, $C$, for the range of $T-\lambda I_V$, $W$, using the scalars $\scalarlist{a}{k}$.  If we incorporate these $\ell$ column vectors into the matrix representation $\matrixrep{T}{B}{B}$ we find $\ell$ occurrences of $\lambda$ on the diagonal, and any nonzero entries lying only in the first $k$ rows.  Together with the $k\times k$ upper triangular representation in the upper left-hand corner, the entire matrix representation is now clearly upper triangular.  This completes the induction step, so for any linear transformation there is a basis that creates an upper triangular matrix representation.</p>
+<p>In the penultimate equality, we have rewritten an element of the range of $T-\lambda I_V$ as a linear combination of the basis vectors, $C$, for the range of $T-\lambda I_V$, $W$, using the scalars $\scalarlist{a}{k}$.  If we incorporate these $m-k$ column vectors into the matrix representation $\matrixrep{T}{B}{B}$ we find $m-k$ occurrences of $\lambda$ on the diagonal, and any nonzero entries lying only in the first $k$ rows.  Together with the $k\times k$ upper triangular representation in the upper left-hand corner, the entire matrix representation for $T$ is clearly upper triangular.  This completes the induction step.  So for any linear transformation there is a basis that creates an upper triangular matrix representation.</p>
 
 <p>We have one more statement in the conclusion of the theorem to verify.  The eigenvalues of $T$, and their multiplicities, can be computed with the techniques of <acroref type="chapter" acro="E" /> relative to any matrix representation (<acroref type="theorem" acro="EER" />). We take this approach with our upper triangular matrix representation $\matrixrep{T}{B}{B}$.  Let $d_i$ be the diagonal entry of $\matrixrep{T}{B}{B}$ in row $i$ and column $i$.  Then the characteristic polynomial, computed as a determinant (<acroref type="definition" acro="CP" />) with repeated expansions about the first column, is
 <alignmath>
