@@ -28,6 +28,7 @@ Change:  Subsection PD.DS (Direct Sums) removed, now in second volume
 Change:  Subsection MM.PMM, before Theorem MMIP, conjugate fixed to reflect theorem (Dave Perkins)
 Change:  Solution SLT.C25 no longer uses rank of a linear transformation (Becca Ebert)
 Change:  Proof of Theorem OD rewritten
+Change:  Theorem UTMR, proof changed to remove dependence on direct sums (Tyler Ueltschi)
 Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
 Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
 Typo:  LaTeX/XML formatting in Solutions RREF.C11, RREF.C13, RREF.C16 (Caden Robinson)
